complete add to cart,wishlist

--- a/FootLand/templates/add_product.html
+++ b/FootLand/templates/add_product.html
@@ -101,6 +101,12 @@
         <label for="brand">Brand:</label>
         {{ form.brand }}
         <small class="error">{{ form.brand.errors }}</small>
+
+        <!-- type -->
+        <label for="type">Type:</label>
+        {{ form.type }}
+        <small class="error">{{ form.type.errors }}</small>
+    
     
         <!-- Price -->
         <label for="price">Price:</label>
