--- a/FootLand/templates/view_product.html
+++ b/FootLand/templates/view_product.html
@@ -85,6 +85,7 @@
                 <th>Product Name</th>
                 <th>Description</th>
                 <th>Brand</th>
+                <th>Type</th>
                 <th>Size</th>
                 <th>Color</th>
                 <th>Price</th>
@@ -100,6 +101,7 @@
                 <td>{{ product.name }}</td>  <!-- Moved product name here -->
                 <td>{{ product.description }}</td>
                 <td>{{ product.brand }}</td>
+                <td>{{ product.type }}</td>
                 <td>{{ product.size }}</td>
                 <td>{{ product.color }}</td>
                 <td>{{ product.price }}</td>
