made changes in product model

--- a/FootLand/templates/add_product.html
+++ b/FootLand/templates/add_product.html
@@ -92,10 +92,15 @@
         {{ form.name }}
         <small class="error">{{ form.name.errors }}</small>
     
-        <!-- Description -->
-        <label for="description">Description:</label>
-        {{ form.description }}
-        <small class="error">{{ form.description.errors }}</small>
+        <!-- Material -->
+        <label for="material">Material:</label>
+        {{ form.material }}
+        <small class="error">{{ form.material.errors }}</small>
+
+         <!-- type -->
+         <label for="type">Type:</label>
+         {{ form.type }}
+         <small class="error">{{ form.type.errors }}</small>
     
         <!-- Brand -->
         <label for="brand">Brand:</label>
