--- a/FootLand/templates/product_detail.html
+++ b/FootLand/templates/product_detail.html
@@ -186,6 +186,8 @@
                 <h1>{{ product.name }}</h1>
                 <p class="price">Rs. {{ product.price }}</p>
                 <p><strong>Description:</strong> {{ product.description }}</p>
+                <p><strong>Material:</strong> {{ product.material }}</p>
+                
                 <p><strong>Brand:</strong> {{ product.brand }}</p>
                 <p><strong>Available Sizes:</strong> {{ product.size }}</p>
                 <p><strong>Color:</strong> {{ product.color }}</p>
