--- a/FootLand/templates/product_detail.html
+++ b/FootLand/templates/product_detail.html
@@ -173,7 +173,7 @@
             display: none;
             position: absolute;
             right: 0;
-            background-color: #ffd6d6;
+            background-color: #fdfafa;
             min-width: 160px;
             box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
             z-index: 1;
@@ -192,7 +192,7 @@
         }
 
         .dropdown-content a:hover {
-            background-color: #ffd6d6;
+            background-color: #fdf8f8;
         } 
 
       
